--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
     "jose": "^6.0.12",
@@ -41,6 +44,7 @@
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
+    "tailwind-merge": "^3.3.1",
     "unified": "^11.0.5",
     "uuid": "^11.1.0",
     "zod": "^4.0.15"
@@ -48,6 +52,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^6.0.3",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
